# GLpong

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
lib/: libcglm.so.0.8.5
src/: CMakeLists.txt  base.h  game.c  game.h  main.c  utility.c  utility.h
